objects/jiffle__Group_Registration__c.object
<CustomObject>
    <fields>
        <fullName>jiffle__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Group Registrations</relationshipLabel>
        <relationshipName>Group_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Group Registrations</relationshipLabel>
        <relationshipName>Group_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Check_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jiffle__Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jiffle__Engagement_Type__c</fullName>
        <label>Engagement Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__From_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jiffle__ID__c</fullName>
        <label>ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__JN_Session_Information__c</fullName>
        <label>JN Session Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>jiffle__Jifflenow_Event__c</fullName>
        <formula>jiffle__Session__r.jiffle__Jifflenow_Event__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jifflenow Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Group Registrations</relationshipLabel>
        <relationshipName>Group_Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Registration_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Group Registration UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Requestor_Name__c</fullName>
        <label>Requestor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Session_Name__c</fullName>
        <formula>jiffle__Session__r.jiffle__Session_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Session__c</fullName>
        <label>Session</label>
        <referenceTo>jiffle__Session__c</referenceTo>
        <relationshipLabel>Group Registrations</relationshipLabel>
        <relationshipName>Group_Registrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>jiffle__Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>jiffle__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Time_Zone__c</fullName>
        <label>Time Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Group Registration</label>
    <listViews>
        <fullName>jiffle__All</fullName>
        <columns>NAME</columns>
        <columns>jiffle__Account__c</columns>
        <columns>jiffle__Opportunity__c</columns>
        <columns>jiffle__Status__c</columns>
        <columns>jiffle__Campaign__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GR-{0000}</displayFormat>
        <label>Group Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>